Checkpoint work in progress.

--- a/template.tex
+++ b/template.tex
@@ -19,6 +19,9 @@ $endif$
     \usepackage[utf8]{inputenc}
   \fi
 \fi
+% Choose fonts
+\setsansfont[Path = fonts/ubuntu/, UprightFont = *-Regular, BoldFont = *-Bold, ItalicFont = *-Italic, BoldItalicFont = *-BoldItalic]{Ubuntu}
+\setsansfont[Path = fonts/ubuntumono/, UprightFont = *-Regular, BoldFont = *-Bold, ItalicFont = *-Italic, BoldItalicFont = *-BoldItalic]{UbuntuMono}
 $if(natbib)$
 \usepackage{natbib}
 \bibliographystyle{plainnat}
