Use lualatex to fix font brokenness.

--- a/template.tex
+++ b/template.tex
@@ -21,7 +21,7 @@ $endif$
 \fi
 % Choose fonts
 \setsansfont[Path = fonts/ubuntu/, UprightFont = *-Regular, BoldFont = *-Bold, ItalicFont = *-Italic, BoldItalicFont = *-BoldItalic]{Ubuntu}
-\setsansfont[Path = fonts/ubuntumono/, UprightFont = *-Regular, BoldFont = *-Bold, ItalicFont = *-Italic, BoldItalicFont = *-BoldItalic]{UbuntuMono}
+\setmonofont[Path = fonts/ubuntumono/, UprightFont = *-Regular, BoldFont = *-Bold, ItalicFont = *-Italic, BoldItalicFont = *-BoldItalic]{UbuntuMono}
 $if(natbib)$
 \usepackage{natbib}
 \bibliographystyle{plainnat}
