Tweak code examples.

--- a/talk.tex
+++ b/talk.tex
@@ -43,7 +43,7 @@
    morestring=[b]'%
   }[keywords,comments,strings,directives]%
 
-\definecolor{darkblue}{rgb}{0,0,0.5}
+\definecolor{darkblue}{rgb}{0,0,0.75}
 \definecolor{darkgreen}{rgb}{0,0.5,0}
 
 \lstset{%
@@ -75,7 +75,7 @@ showstringspaces=false%
 \begin{overlayarea}{\textwidth}{\textheight}
 \only<2>{\lstinputlisting[language=Rust]{example1.rs}}
 \only<3>{\lstinputlisting[language=Rust]{example2.rs}}
-\only<4>{\small\lstinputlisting[language=Rust]{example3.rs}}
+\only<4>{\lstinputlisting[language=Rust]{example3.rs}}
 \end{overlayarea}
 \end{frame}
 
