--- a/talk.tex
+++ b/talk.tex
@@ -170,7 +170,7 @@ showstringspaces=false%
 \begin{frame}\frametitle{Current Status}
 \begin{itemize}
   \item Working on unoptimized Rust builds only
-  \item Yes, we feel the irony
+  \item Yes, I feel the irony
 \end{itemize}
 \end{frame}
 
